apps/base/podinfo/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: podinfo-svc
  labels:
    app: podinfo
spec:
  type: LoadBalancer
  selector:
    app: podinfo
  ports:
    - name: http
      protocol: TCP
      port: 9898
      targetPort: 9898
