apps/base/podinfo/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: podinfo
spec:
  parentRefs:
    - name: sandbox-gateway
      namespace: nginx-gateway
  hostnames:
    - podinfo.miskers.org
  rules:
    - backendRefs:
        - name: podinfo-svc
          port: 9898
